<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity0">

    <TextView
        android:id="@+id/tvhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:padding="4dp"
        android:text="@string/choose_your_category"
        android:textColor="@color/black"

        android:textSize="25sp"
        android:textStyle="italic" />
    <Button
        android:id="@+id/btnbutton"
        android:layout_below="@+id/tvhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:textColor="#FF9C27B0"
        android:textAllCaps="false"
        android:padding="3dp"
        android:textSize="20sp"
        android:text="@string/sports" />
    <Button
        android:id="@+id/btnbutton1"
        android:layout_below="@+id/btnbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textColor="#FF9C27B0"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:padding="3dp"
        android:text="@string/health"
        />
    <Button
        android:id="@+id/btnbutton2"
        android:layout_below="@+id/btnbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textColor="#FF9C27B0"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:padding="3dp"
        android:text="@string/science"
        />
    <Button
        android:id="@+id/btnbutton3"
        android:layout_below="@+id/btnbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="#FF9C27B0"
        android:padding="3dp"
        android:layout_centerHorizontal="true"
        android:text="@string/business"
        android:background="@drawable/button"
        />
    <Button
        android:id="@+id/btnbutton4"
        android:layout_below="@+id/btnbutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:textColor="#FF9C27B0"
        android:padding="4dp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:text="@string/technology"
        />
    <Button
        android:id="@+id/btnbutton5"
        android:layout_below="@+id/btnbutton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:text="@string/entertainment"
        android:padding="5dp"
        android:textColor="#FF9C27B0"
        android:background="@drawable/button"
        />

</RelativeLayout>
